[metadata]
# replace with your username:
name = GMDN
version = 1.0.1
author = Andreas B. Berg
author_email = berg.andreasb+PyPi@gmail.com
description = A python implementation of XKCD''s Geothmetic Meandian ( https://xkcd.com/2435/ )
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BollaBerg/GMDN
project_urls =
    Bug Tracker = https://github.com/BollaBerg/GMDN/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
keywords = 
    XKCD
    GMDN
    Geothmetic meandian
    Math

[options]
packages = find:
python_requires = >=3.8